# Data_Science_HW_1

./: Hw1.ipynb  hw.py  pyproject.toml
